// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deployments handles a range of mocked deployment events: deployment fixture[0] INPUT 1`] = `
{
  "action": "created",
  "deployment": {
    "created_at": "2019-05-15T15:20:53Z",
    "creator": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "description": null,
    "environment": "production",
    "id": 145988746,
    "node_id": "MDEwOkRlcGxveW1lbnQxNDU5ODg3NDY=",
    "original_environment": "production",
    "payload": {},
    "ref": "master",
    "repository_url": "https://api.github.com/repos/Codertocat/Hello-World",
    "sha": "f95f852bd8fca8fcc58a9a2d6c842781e32a215e",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments/145988746/statuses",
    "task": "deploy",
    "updated_at": "2019-05-15T15:20:53Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World/deployments/145988746",
  },
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 1,
    "forks_count": 1,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": "Ruby",
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:52Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:20:41Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "watchers": 0,
    "watchers_count": 0,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
}
`;

exports[`deployments handles a range of mocked deployment events: deployment fixture[0] OUTPUT 1`] = `
[
  {
    "created_at": 1700000000000,
    "dataEventSignature": "deployment",
    "metricsSignature": "deployment",
    "output": {
      "deployTime": 1557933653000,
      "duration": 0,
      "env": "production",
      "environmentDeployments": {
        "isInitialDeployment": false,
        "timeSinceLastDeploy": 152114500000,
      },
      "packageJson": {
        "isParseable": false,
        "version": null,
      },
    },
    "owner": "Codertocat",
    "repo": "Hello-World",
    "status": "success",
  },
]
`;

exports[`deployments handles a range of mocked deployment events: deployment fixture[1] INPUT 1`] = `
{
  "action": "created",
  "deployment": {
    "created_at": "2022-01-03T01:28:30Z",
    "creator": {
      "avatar_url": "https://avatars.githubusercontent.com/u/9919?v=4",
      "events_url": "https://api.github.com/users/github-pages%5Bbot%5D/events{/privacy}",
      "followers_url": "https://api.github.com/users/github-pages%5Bbot%5D/followers",
      "following_url": "https://api.github.com/users/github-pages%5Bbot%5D/following{/other_user}",
      "gists_url": "https://api.github.com/users/github-pages%5Bbot%5D/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/apps/github-pages",
      "id": 52472962,
      "login": "github-pages[bot]",
      "node_id": "MDM6Qm90NTI0NzI5NjI=",
      "organizations_url": "https://api.github.com/users/github-pages%5Bbot%5D/orgs",
      "received_events_url": "https://api.github.com/users/github-pages%5Bbot%5D/received_events",
      "repos_url": "https://api.github.com/users/github-pages%5Bbot%5D/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/github-pages%5Bbot%5D/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/github-pages%5Bbot%5D/subscriptions",
      "type": "Bot",
      "url": "https://api.github.com/users/github-pages%5Bbot%5D",
    },
    "description": null,
    "environment": "github-pages",
    "id": 145988746,
    "node_id": "MDEwOkRlcGxveW1lbnQxNDU5ODg3NDY=",
    "original_environment": "github-pages",
    "payload": {},
    "performed_via_github_app": null,
    "production_environment": false,
    "ref": "gh-pages",
    "repository_url": "https://api.github.com/repos/Codertocat/Hello-World",
    "sha": "f95f852bd8fca8fcc58a9a2d6c842781e32a215e",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments/145988746/statuses",
    "task": "deploy",
    "transient_environment": false,
    "updated_at": "2022-01-03T01:28:40Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World/deployments/145988746",
  },
  "installation": {
    "id": 1,
    "node_id": "MDIzOkludGVncmF0aW9uSW5zdGFsbGF0aW9uMQ==",
  },
  "organization": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/38302899?v=4",
    "description": "",
    "events_url": "https://api.github.com/orgs/Octocoders/events",
    "hooks_url": "https://api.github.com/orgs/Octocoders/hooks",
    "id": 38302899,
    "issues_url": "https://api.github.com/orgs/Octocoders/issues",
    "login": "Octocoders",
    "members_url": "https://api.github.com/orgs/Octocoders/members{/member}",
    "node_id": "MDEyOk9yZ2FuaXphdGlvbjM4MzAyODk5",
    "public_members_url": "https://api.github.com/orgs/Octocoders/public_members{/member}",
    "repos_url": "https://api.github.com/orgs/Octocoders/repos",
    "url": "https://api.github.com/orgs/Octocoders",
  },
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 1,
    "forks_count": 1,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": "Ruby",
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:52Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:20:41Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
  "workflow": {
    "badge_url": "https://github.com/Codertocat/Hello-World/workflows/pages-build-deployment/badge.svg",
    "created_at": "2022-01-03T01:27:48.000Z",
    "html_url": "https://github.com/Codertocat/Hello-World/blob/master/dynamic/pages/pages-build-deployment",
    "id": 17248323,
    "name": "pages-build-deployment",
    "node_id": "W_kwDOALyme84BBzBD",
    "path": "dynamic/pages/pages-build-deployment",
    "state": "active",
    "updated_at": "2022-01-03T01:27:48.000Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World/actions/workflows/17248323",
  },
  "workflow_run": {
    "actor": {
      "avatar_url": "https://avatars0.githubusercontent.com/u/15669918?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 15669918,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjE1NjY5OTE4",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "check_suite_id": 4812750241,
    "check_suite_node_id": "CS_kwDOALyme88AAAABHty9oQ",
    "conclusion": null,
    "created_at": "2022-01-03T01:27:48Z",
    "event": "dynamic",
    "head_branch": "gh-pages",
    "head_sha": "9e602444f49b8b69c3a9a51fa97a115f3d323508",
    "html_url": "https://github.com/Codertocat/Hello-World/actions/runs/289782451",
    "id": 289782451,
    "name": "pages build and deployment",
    "node_id": "WFR_kwLOALyme85iNFsT",
    "pull_requests": [],
    "run_attempt": 1,
    "run_number": 1,
    "run_started_at": "2022-01-03T01:27:48Z",
    "status": "in_progress",
    "triggering_actor": {
      "avatar_url": "https://avatars0.githubusercontent.com/u/15669918?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 15669918,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjE1NjY5OTE4",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "updated_at": "2022-01-03T01:28:40Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World/actions/runs/289782451",
    "workflow_id": 17248323,
  },
}
`;

exports[`deployments handles a range of mocked deployment events: deployment fixture[1] OUTPUT 1`] = `
[
  {
    "created_at": 1700000000000,
    "dataEventSignature": "deployment",
    "metricsSignature": "deployment",
    "output": {
      "deployTime": 1641173310000,
      "duration": 10000,
      "env": "github-pages",
      "environmentDeployments": {
        "isInitialDeployment": false,
        "timeSinceLastDeploy": 235354157000,
      },
      "packageJson": {
        "isParseable": false,
        "version": null,
      },
    },
    "owner": "Codertocat",
    "repo": "Hello-World",
    "status": "success",
  },
]
`;

exports[`deployments handles a range of mocked deployment events: deployment fixture[2] INPUT 1`] = `
{
  "action": "created",
  "deployment": {
    "created_at": "2019-05-15T15:20:53Z",
    "creator": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "description": null,
    "environment": "production",
    "id": 145988746,
    "node_id": "MDEwOkRlcGxveW1lbnQxNDU5ODg3NDY=",
    "original_environment": "production",
    "payload": {},
    "ref": "master",
    "repository_url": "https://api.github.com/repos/Codertocat/Hello-World",
    "sha": "f95f852bd8fca8fcc58a9a2d6c842781e32a215e",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments/145988746/statuses",
    "task": "deploy",
    "updated_at": "2019-05-15T15:20:53Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World/deployments/145988746",
  },
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 1,
    "forks_count": 1,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": "Ruby",
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:52Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:20:41Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
  "workflow": null,
  "workflow_run": null,
}
`;

exports[`deployments handles a range of mocked deployment events: deployment fixture[2] OUTPUT 1`] = `
[
  {
    "created_at": 1700000000000,
    "dataEventSignature": "deployment",
    "metricsSignature": "deployment",
    "output": {
      "deployTime": 1557933653000,
      "duration": 0,
      "env": "production",
      "environmentDeployments": {
        "isInitialDeployment": false,
        "timeSinceLastDeploy": 152114500000,
      },
      "packageJson": {
        "isParseable": false,
        "version": null,
      },
    },
    "owner": "Codertocat",
    "repo": "Hello-World",
    "status": "success",
  },
]
`;

exports[`deployments handles a range of mocked deployment events: deployment fixture[3] INPUT 1`] = `
{
  "action": "created",
  "deployment": {
    "created_at": "2019-05-15T15:20:53Z",
    "creator": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "description": null,
    "environment": "production",
    "id": 145988746,
    "node_id": "MDEwOkRlcGxveW1lbnQxNDU5ODg3NDY=",
    "original_environment": "production",
    "payload": {},
    "ref": "master",
    "repository_url": "https://api.github.com/repos/Codertocat/Hello-World",
    "sha": "f95f852bd8fca8fcc58a9a2d6c842781e32a215e",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments/145988746/statuses",
    "task": "deploy",
    "updated_at": "2019-05-15T15:20:53Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World/deployments/145988746",
  },
  "installation": {
    "id": 1,
    "node_id": "MDIzOkludGVncmF0aW9uSW5zdGFsbGF0aW9uMQ==",
  },
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 1,
    "forks_count": 1,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": "Ruby",
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:52Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:20:41Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
  "workflow": null,
  "workflow_run": null,
}
`;

exports[`deployments handles a range of mocked deployment events: deployment fixture[3] OUTPUT 1`] = `
[
  {
    "created_at": 1700000000000,
    "dataEventSignature": "deployment",
    "metricsSignature": "deployment",
    "output": {
      "deployTime": 1557933653000,
      "duration": 0,
      "env": "production",
      "environmentDeployments": {
        "isInitialDeployment": false,
        "timeSinceLastDeploy": 152114500000,
      },
      "packageJson": {
        "isParseable": false,
        "version": null,
      },
    },
    "owner": "Codertocat",
    "repo": "Hello-World",
    "status": "success",
  },
]
`;
